# easydl

./: README.md  com.github.copperly123.easydl.json  com.github.copperly123.easydl.json~  meson.build
data/: com.github.copperly123.easydl.appdata.xml.in  com.github.copperly123.easydl.desktop.in  com.github.copperly123.easydl.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: about_dialog.ui  download_message_dialog.ui  easydl-gui.in  easydl_gui.gresource.xml  error_message.ui  main.py  meson.build  window.py  window.ui  window.ui~  youtube_downloader.py
